--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.5",
     "run": "1.4.0",
     "rxjs": "5.5.7",
     "sw-toolbox": "3.6.0",
